# glasspane

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: LEARNING.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: convert.rs  imaging.rs  lib.rs  main.rs
src/lib/: viewerApi.ts
