[package]
name = "glasspane"
version = "0.1.0"
description = "A fast, lightweight personal image viewer"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "glasspane_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25" }            # WebP/JPEG/PNG/GIF decode (pure Rust)
zip = "2"
tauri-plugin-dialog = "2"               # native folder picker
tauri-plugin-window-state = "2"         # remember window size/position across launches

[features]
# AVIF decode links the system libdav1d (>= 1.3.0) through pkg-config, which is
# awkward to provide on Windows. Keep it opt-in so the default build works
# everywhere; enable with `--features avif` on platforms that have libdav1d.
default = []
avif = ["image/avif-native"]
